--- a/InazumaElevenVRSaveEditor.csproj
+++ b/InazumaElevenVRSaveEditor.csproj
@@ -8,7 +8,7 @@
     <UseWPF>true</UseWPF>
     <AssemblyName>InazumaElevenVRSaveEditor</AssemblyName>
     <RootNamespace>InazumaElevenVRSaveEditor</RootNamespace>
-    <Version>1.0.1</Version>
+    <Version>1.0.2</Version>
     <Authors>An Average Developer</Authors>
     <Product>Inazuma Eleven VR Save Editor</Product>
     <Description>A simple save editor for Inazuma Eleven VR</Description>
@@ -29,6 +29,23 @@
 
   <ItemGroup>
     <EmbeddedResource Include="Resources\EACLauncher.zip" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Resources\Spirits\Harper Evans Breach.png" />
+    <Resource Include="Resources\Spirits\Hector Helio Justice.png" />
+    <Resource Include="Resources\Cards\Spirits.png" />
+    <Resource Include="Resources\Cards\Stars.png" />
+    <Resource Include="Resources\Cards\God Hand Flower.png" />
+    <Resource Include="Resources\Cards\Inazuma Flower.png" />
+    <Resource Include="Resources\Cards\Kicking Power.png" />
+    <Resource Include="Resources\Beans\Instantaneous.png" />
+    <Resource Include="Resources\Beans\Intelligence.png" />
+    <Resource Include="Resources\Beans\Kicking Power.png" />
+    <Resource Include="Resources\Beans\Minds Eye.png" />
+    <Resource Include="Resources\Beans\Strength.png" />
+    <Resource Include="Resources\Beans\Technique.png" />
+    <Resource Include="Resources\Beans\Unshakable.png" />
   </ItemGroup>
 
 </Project>
