--- a/InazumaElevenVRSaveEditor.csproj
+++ b/InazumaElevenVRSaveEditor.csproj
@@ -8,7 +8,7 @@
     <UseWPF>true</UseWPF>
     <AssemblyName>InazumaElevenVRSaveEditor</AssemblyName>
     <RootNamespace>InazumaElevenVRSaveEditor</RootNamespace>
-    <Version>1.1.0</Version>
+    <Version>1.2.0</Version>
     <Authors>An Average Developer</Authors>
     <Product>Inazuma Eleven VR Save Editor</Product>
     <Description>A simple save editor for Inazuma Eleven VR</Description>
@@ -41,6 +41,7 @@
     <Resource Include="Resources\Cards\Kicking Power.png" />
     <Resource Include="Resources\Cards\VSTAR.png" />
     <Resource Include="Resources\Cards\NPOSS.png" />
+    <Resource Include="Resources\Cards\Pasivas.png" />
     <Resource Include="Resources\Vitems\VSTAR.png" />
     <Resource Include="Resources\Vitems\VSTONE.png" />
     <Resource Include="Resources\Beans\Instantaneous.png" />
