--- a/InazumaElevenVRSaveEditor.csproj
+++ b/InazumaElevenVRSaveEditor.csproj
@@ -8,7 +8,7 @@
     <UseWPF>true</UseWPF>
     <AssemblyName>InazumaElevenVRSaveEditor</AssemblyName>
     <RootNamespace>InazumaElevenVRSaveEditor</RootNamespace>
-    <Version>1.2.0</Version>
+    <Version>1.3.0</Version>
     <Authors>An Average Developer</Authors>
     <Product>Inazuma Eleven VR Save Editor</Product>
     <Description>A simple save editor for Inazuma Eleven VR</Description>
@@ -32,8 +32,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Resource Include="Resources\Spirits\Harper Evans Breach.png" />
-    <Resource Include="Resources\Spirits\Hector Helio Justice.png" />
+    <Resource Include="Resources\Spirits\*.jpg" />
     <Resource Include="Resources\Cards\Spirits.png" />
     <Resource Include="Resources\Cards\Stars.png" />
     <Resource Include="Resources\Cards\God Hand Flower.png" />
