--- a/InazumaElevenVRSaveEditor.csproj
+++ b/InazumaElevenVRSaveEditor.csproj
@@ -8,7 +8,7 @@
     <UseWPF>true</UseWPF>
     <AssemblyName>InazumaElevenVRSaveEditor</AssemblyName>
     <RootNamespace>InazumaElevenVRSaveEditor</RootNamespace>
-    <Version>1.4.1</Version>
+    <Version>1.4.2</Version>
     <Authors>An Average Developer</Authors>
     <Product>Inazuma Eleven VR Save Editor</Product>
     <Description>A simple save editor for Inazuma Eleven VR</Description>
@@ -33,6 +33,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="icon.ico" />
     <Resource Include="Resources\Spirits\*.jpg" />
     <Resource Include="Resources\Cards\Spirits.png" />
     <Resource Include="Resources\Cards\Stars.png" />
