--- a/InazumaElevenVRSaveEditor.csproj
+++ b/InazumaElevenVRSaveEditor.csproj
@@ -8,7 +8,7 @@
     <UseWPF>true</UseWPF>
     <AssemblyName>InazumaElevenVRSaveEditor</AssemblyName>
     <RootNamespace>InazumaElevenVRSaveEditor</RootNamespace>
-    <Version>1.5.0</Version>
+    <Version>1.5.1</Version>
     <Authors>An Average Developer</Authors>
     <Product>Inazuma Eleven VR Save Editor</Product>
     <Description>A simple save editor for Inazuma Eleven VR</Description>
@@ -30,6 +30,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Resources\EACLauncher.zip" />
     <EmbeddedResource Include="Resources\SkipStory.zip" />
+    <EmbeddedResource Include="Resources\Custom Passives.CT" />
+    <EmbeddedResource Include="Resources\CheatEngineInstaller.zip" />
+    <EmbeddedResource Include="Resources\Tutorials\**\*.*" />
   </ItemGroup>
 
   <ItemGroup>
@@ -57,28 +60,7 @@
     <Resource Include="Resources\Logos\Dev.png" />
     <Resource Include="Resources\Logos\Instagram.png" />
     <Resource Include="Resources\Logos\Discord.png" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <!-- Tutorial Videos - Copy to output directory -->
-    <Content Include="Resources\Tutorials\**\*.*">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-
-    <!-- Custom Passives CT file -->
-    <Content Include="Resources\Custom Passives.CT">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-
-    <!-- Cheat Engine Tutorial Images -->
-    <Content Include="Resources\Cheat Engine\*.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-
-    <!-- Cheat Engine Installer -->
-    <Content Include="Resources\CheatEngineInstaller.zip">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
+    <Resource Include="Resources\Cheat Engine\*.png" />
   </ItemGroup>
 
 </Project>
